[gd_scene load_steps=8 format=2]

[ext_resource path="res://HUD.gd" type="Script" id=1]
[ext_resource path="res://dodge_assets/fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 56
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 72
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 36
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=5]
size = 36
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 2 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Header" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 480.0
margin_bottom = 80.0
rect_min_size = Vector2( 0, 80 )

[node name="ScoreLabel" type="Label" parent="VBoxContainer/Header"]
margin_left = 240.0
margin_top = 5.0
margin_right = 240.0
margin_bottom = 74.0
size_flags_horizontal = 6
size_flags_vertical = 6
custom_fonts/font = SubResource( 1 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Body" type="VBoxContainer" parent="VBoxContainer"]
visible = false
margin_top = 84.0
margin_right = 480.0
margin_bottom = 676.0
size_flags_vertical = 3
alignment = 1

[node name="MessageLabel" type="Label" parent="VBoxContainer/Body"]
margin_top = 117.0
margin_right = 480.0
margin_bottom = 294.0
size_flags_vertical = 10
custom_fonts/font = SubResource( 2 )
text = "Dodge the Creeps"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buttons" type="VBoxContainer" parent="VBoxContainer/Body"]
margin_left = 140.0
margin_top = 298.0
margin_right = 340.0
margin_bottom = 592.0
size_flags_horizontal = 4
size_flags_vertical = 3

[node name="Start" type="MarginContainer" parent="VBoxContainer/Body/Buttons"]
margin_left = -1.0
margin_top = 32.0
margin_right = 199.0
margin_bottom = 112.0
size_flags_horizontal = 6
size_flags_vertical = 6

[node name="Button" type="Button" parent="VBoxContainer/Body/Buttons/Start"]
margin_right = 200.0
margin_bottom = 80.0
rect_min_size = Vector2( 200, 80 )
size_flags_horizontal = 0
custom_fonts/font = SubResource( 3 )
text = "Start"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Settings" type="MarginContainer" parent="VBoxContainer/Body/Buttons"]
margin_left = -1.0
margin_top = 149.0
margin_right = 199.0
margin_bottom = 229.0
size_flags_horizontal = 6
size_flags_vertical = 2

[node name="Button" type="Button" parent="VBoxContainer/Body/Buttons/Settings"]
margin_right = 200.0
margin_bottom = 80.0
rect_min_size = Vector2( 200, 80 )
size_flags_horizontal = 0
custom_fonts/font = SubResource( 5 )
text = "Settings"

[node name="Footer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 84.0
margin_right = 480.0
margin_bottom = 124.0
rect_min_size = Vector2( 0, 40 )

[node name="Version" type="MarginContainer" parent="VBoxContainer/Footer"]
margin_right = 120.0
margin_bottom = 40.0
rect_min_size = Vector2( 120, 40 )

[node name="Label" type="Label" parent="VBoxContainer/Footer/Version"]
margin_top = 10.0
margin_right = 120.0
margin_bottom = 30.0
custom_fonts/font = SubResource( 4 )
text = "Version: 1.1"
align = 1
valign = 1

[node name="TextureRect" type="TextureRect" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -0.5
margin_bottom = 0.5
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="timeout" from="MessageTimer" to="." method="_on_MessageTimer_timeout"]
[connection signal="pressed" from="VBoxContainer/Body/Buttons/Start/Button" to="." method="_on_StartButton_pressed"]
